Finished rough build guide

--- a/Making/DivingBoard/DivingBoard.html
+++ b/Making/DivingBoard/DivingBoard.html
@@ -94,9 +94,7 @@ It does sound a bit like I've glossed over some stuff there, but the instruction
 <p>I've used a Raspberry Pi 3B+ as the brain of this project because it's what I have on hand. I've tried the whole setup out with a Pi Zero subbed in, and while it works, the latency is obvious. A Pi Zero 2 would probably do the job decently. </p>
 
 <h3>How to make one:</h3>
-<p>Software's available below- a construction guide will be available here later.</p>
-
-<p><i><a id="buildGuide" href="buildGuide.html">Here</a>'s the work in progress version.</i></p>
+<p>The software for the Arduino and the Raspberry Pi is available at the bottom of the page. A full build guide can be found <a id="buildGuide" href="buildGuide.html">here</a>.</p>
 
 <h3>Goals:</h3>
 <p>
@@ -120,7 +118,7 @@ It does sound a bit like I've glossed over some stuff there, but the instruction
    2. UX needs some minor improvements (mostly idiot-proofing (not a dig at users; <i>I'm</i> the idiot)), a planned software editor for making more detailed configurations is planned but not written, and the device is occasionally a bit erratic; freezing or failing to boot properly are both rare but recurring problems.<a href="#footnote-2-ref">&#8617;</a> 
 </p>
 <hr>
-Last updated 2024-04-07
+Last updated 2024-05-12
 </body>
 </html>
 
