--- a/Making/DivingBoard/howItWorks.html
+++ b/Making/DivingBoard/howItWorks.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<p><a href="../DivingBoard.html#howItWorks">Back</a></p>
+	<p><a href="DivingBoard.html#howItWorks">Back</a></p>
 	
 	<h1 style="text-align:center;">DivingBoard</h1>
 	<h2 style="text-align:center; color:grey;">How It Works</h2>
