--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
 <p>I'm a 22-year-old musician and hobbyist maker of various things. Currently based in Reading, UK, working in <a href="https://www.hickies.co.uk">Hickies Music Shop</a> and playing in <a href="https://www.moonagebowietribute.co.uk/">Moonage, a David Bowie Tribute Band.</a></p>
 <p>There's still a lot to write up, but this website aims to collect together various projects I've done over the years, including:</p>
 <ul>
-	<li><a href="DivingBoard.html">A homemade Sysex-sending MIDI controller for my synth</a></li>
+	<li><a href="Making/DivingBoard/DivingBoard.html">A homemade Sysex-sending MIDI controller for my synth</a></li>
 	<li>The original score to a 5-star play</li>
 	<li>Several kazoo-only cover albums</li>
 	<li>An A*- earning EPQ</li>
