Added MIDI foot manual page, updated other details

--- a/home.html
+++ b/home.html
@@ -40,10 +40,10 @@
 <h2 style="background-color:tomato; margin:30px; border:5px; text-align:center; color:white;">For musical bookings, see the 'Contact Me' section below.</h2>
 	
 <h3>About Me:</h3>
-<p>I'm a 22-year-old musician and hobbyist maker of various things. Currently based in Reading, UK, working in <a href="https://www.hickies.co.uk">Hickies Music Shop</a> and playing in <a href="https://www.moonagebowietribute.co.uk/">Moonage, a David Bowie Tribute Band.</a></p>
+<p>I'm a 22-year-old musician and hobbyist maker of various things. Currently based in Reading, UK, playing in <a href="https://www.moonagebowietribute.co.uk/">Moonage, a David Bowie Tribute Band.</a></p>
 <p>There's still a lot to write up, but this website aims to collect together various projects I've done over the years, including:</p>
 <ul>
-	<li><a href="Making/DivingBoard/DivingBoard.html">A homemade Sysex-sending MIDI controller for my synth</a></li>
+	<li>A MIDI-based lightshow device for my keyboard</li>
 	<li>The original score to a 5-star play</li>
 	<li>Several kazoo-only cover albums</li>
 	<li>An A*- earning EPQ</li>
@@ -73,6 +73,13 @@
 		<th>Category</th>
 		<th>Title</th>
 	  </tr>
+	  <tr>
+		  <td><img src="Making/midiFootManual/thumbnail.jpg" style="width:50px;height:50px;"></td>
+	    <td>2024-09-12</td>
+		<td><a href="Making/home.html">Making</a></td>
+		<td><a href="Making/midiFootManual/midiFootManual.html">MIDI Foot Manual - I outfitted an old set of organ foot pedals with MIDI for a friend in a prog band</a></td>
+	  </tr>
+	  <tr>
 	  <tr>
 		  <td><img src="Making/DivingBoard/design.jpg" style="width:50px;height:50px;"></td>
 	    <td>2024-02-08</td>
@@ -155,7 +162,7 @@ Current planned improvements include better scaling for mobile devices and very 
 I do not plan on switching to a website supplier/designer such as Squarespace, because apparently I'm a stubborn old fart trapped in a young man's body.</p>
 
 <hr>
-Last updated 2024-05-07
+Last updated 2024-09-12
 </body>
 </html>
 
