--- a/Making/home.html
+++ b/Making/home.html
@@ -45,14 +45,15 @@
 <br>
 
 <div id="grid">
-	<a href="DivingBoard/DivingBoard.html" class="img" style="background-image: url(DivingBoard/DivingBoard.png)" title="Solar Trader - bootlegging an out-of-print board game from the '90s"></a>
+	<a href="midiFootManual/midiFootManual.html" class="img" style="background-image: url(midiFootManual/thumbnail.jpg)" title="MIDI Foot Manual - watch your back, Geddy Lee"></a>
+	<a href="DivingBoard/DivingBoard.html" class="img" style="background-image: url(DivingBoard/DivingBoard.png)" title="DivingBoard - a homemade sysex MIDI controller to combat menu diving"></a>
 	<a href="SolarTrader/SolarTrader.html" class="img" style="background-image: url(SolarTrader/SolarTrader.png)" title="Solar Trader - bootlegging an out-of-print board game from the '90s"></a>
 	<a href="wordleSolver/wordleSolver.html" class="img" style="background-image: url(wordleSolver/wordleSolver.png)" title="Wordle Solver - not a clever one, but it *does* work"></a>
 	<a href="timelapseCam/timelapseCam.html" class="img" style="background-image: url(timelapseCam/timelapseCam.jpg)" title="Timelapse Cam - using Python and a webcam to take timelapses wherever I can take a Raspberry Pi"></a>
  </div>
 
 <hr>
-Last updated 2024-03-31
+Last updated 2024-09-12
 </body>
 </html>
 
