MOOP1 name change, self pic change

--- a/Making/home.html
+++ b/Making/home.html
@@ -45,7 +45,7 @@
 <br>
 
 <div id="grid">
-	<a href="midiFootManual/midiFootManual.html" class="img" style="background-image: url(midiFootManual/thumbnail.jpg)" title="MIDI Foot Manual - watch your back, Geddy Lee"></a>
+	<a href="moop1/moop1.html" class="img" style="background-image: url(moop1/thumbnail.jpg)" title="MOOP1, a MIDI Foot Manual - watch your back, Geddy Lee"></a>
 	<a href="DivingBoard/DivingBoard.html" class="img" style="background-image: url(DivingBoard/DivingBoard.png)" title="DivingBoard - a homemade sysex MIDI controller to combat menu diving"></a>
 	<a href="SolarTrader/SolarTrader.html" class="img" style="background-image: url(SolarTrader/SolarTrader.png)" title="Solar Trader - bootlegging an out-of-print board game from the '90s"></a>
 	<a href="wordleSolver/wordleSolver.html" class="img" style="background-image: url(wordleSolver/wordleSolver.png)" title="Wordle Solver - not a clever one, but it *does* work"></a>
