--- a/Making/moop1/moop1.html
+++ b/Making/moop1/moop1.html
@@ -14,7 +14,9 @@
 <br><br>
 <p>Here are some pictures of the MIDI foot manual I made- watch this space for a write-up over the coming month or so, whenever I get time.</p>
 
-<img src="footManual.png" title="MIDI Foot Manual"></img>
+<img src="MOOP1.png" title="MIDI Foot Manual"></img>
+
+<img src="IMG_8783.jpg" title="the guts"></img>
 
 <img src="inside.jpg" title="the guts"></img>
 
