--- a/home.html
+++ b/home.html
@@ -74,10 +74,10 @@
 		<th>Title</th>
 	  </tr>
 	  <tr>
-		  <td><img src="Making/midiFootManual/thumbnail.jpg" style="width:50px;height:50px;"></td>
+		  <td><img src="Making/moop1/thumbnail.jpg" style="width:50px;height:50px;"></td>
 	    <td>2024-09-12</td>
 		<td><a href="Making/home.html">Making</a></td>
-		<td><a href="Making/midiFootManual/midiFootManual.html">MIDI Foot Manual - I outfitted an old set of organ foot pedals with MIDI for a friend in a prog band</a></td>
+		<td><a href="Making/moop1/moop1.html">MOOP1 - I outfitted an old set of organ foot pedals with MIDI for a friend in a prog band</a></td>
 	  </tr>
 	  <tr>
 	  <tr>
