Added SSTV Video Filter page...
...fixed-ish the image CSS.

--- a/home.html
+++ b/home.html
@@ -2,13 +2,14 @@
 <html lang="en-GB">
 <head>
 <title>Oliver Hagen</title>
+
+<link rel="stylesheet" href="style.css">
+<base target="_parent">
+
 </head>
 <body>
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-	<link rel="stylesheet" href="style.css">
-	<base target="_parent">
 	
 	<h1 style="text-align:center;"><a href="index.html">Oliver Hagen</a></h1>
 	
@@ -74,7 +75,7 @@
 		<th>Title</th>
 	  </tr>
 	  <tr>
-		  <td><img src="Making/moop1/thumbnail.jpg" style="width:50px;height:50px;"></td>
+		  <td><img src="Making/moop1/thumbnail.jpg" style="height:50px;width:50px;"></td>
 	    <td>2024-09-12</td>
 		<td><a href="Making/home.html">Making</a></td>
 		<td><a href="Making/moop1/moop1.html">MOOP1 - I outfitted an old set of organ foot pedals with MIDI for a friend in a prog band</a></td>
@@ -129,6 +130,12 @@
 		<td><a href="https://youtube.com/playlist?list=PL776zvniD1BhbpTCZIFJqtB4xzULHGqwq">Obscure Covers (Vol. 1)</a></td>
 	  </tr>
 	  <tr>
+		  <td><img src="Making/sstvVideoFilter/sstvVideoFilter.jpg" alt="sstv Video Filter" style="width:50px;height:50px;"></td>
+	    <td>2021-03-21</td>
+		<td><a href="Making/home.html">Music</a></td>
+		<td><a href="Making/sstvVideoFilter/sstvVideoFilter.html">SSTV Video Filter - The slowest way to apply a VHS filter to a video</a></td>
+	  </tr>
+	  <tr>
 		  <td><img src="Music/MorningChildhood/MorningChildhood.png" alt="Morning Childhood album cover" style="width:50px;height:50px;"></td>
 	    <td>2020-09-01</td>
 		<td><a href="Music/home.html">Music</a></td>
@@ -162,7 +169,7 @@ Current planned improvements include better scaling for mobile devices and very 
 I do not plan on switching to a website supplier/designer such as Squarespace, because apparently I'm a stubborn old fart trapped in a young man's body.</p>
 
 <hr>
-Last updated 2024-09-24
+Last updated 2024-11-02
 </body>
 </html>
 
