--- a/Making/home.html
+++ b/Making/home.html
@@ -50,10 +50,11 @@
 	<a href="SolarTrader/SolarTrader.html" class="img" style="background-image: url(SolarTrader/SolarTrader.png)" title="Solar Trader - bootlegging an out-of-print board game from the '90s"></a>
 	<a href="wordleSolver/wordleSolver.html" class="img" style="background-image: url(wordleSolver/wordleSolver.png)" title="Wordle Solver - not a clever one, but it *does* work"></a>
 	<a href="timelapseCam/timelapseCam.html" class="img" style="background-image: url(timelapseCam/timelapseCam.jpg)" title="Timelapse Cam - using Python and a webcam to take timelapses wherever I can take a Raspberry Pi"></a>
+	<a href="sstvVideoFilter/sstvVideoFilter.html" class="img" style="background-image: url(sstvVideoFilter/sstvVideoFilter.jpg)" title="SSTV Video Filter - The slowest possible way to apply a VHS effect to a video file"></a>
  </div>
 
 <hr>
-Last updated 2024-09-12
+Last updated 2024-11-02
 </body>
 </html>
 
