--- a/home.html
+++ b/home.html
@@ -132,7 +132,7 @@
 	  <tr>
 		  <td><img src="Making/sstvVideoFilter/sstvVideoFilter.jpg" alt="sstv Video Filter" style="width:50px;height:50px;"></td>
 	    <td>2021-03-21</td>
-		<td><a href="Making/home.html">Music</a></td>
+		<td><a href="Making/home.html">Making</a></td>
 		<td><a href="Making/sstvVideoFilter/sstvVideoFilter.html">SSTV Video Filter - The slowest way to apply a VHS filter to a video</a></td>
 	  </tr>
 	  <tr>
