--- a/home.html
+++ b/home.html
@@ -16,24 +16,28 @@
 	
 	<div class="flex-container">
 		
+	  <div><th><form action="https://oliverhagen.bandcamp.com/releases;" target="_blank">
+         <button class="button button3" title="Where my original music lives" type="submit"><b>Bandcamp</b></button>
+      </form></th></div>
+	  
+	  <div><th><form action="https://www.fiverr.com/olihagen?up_rollout=true" target="_blank">
+         <button class="button button2" title="'Career portfolio in the Gig Economy'" type="submit"><b>Fiverr</b></button>
+      </form></th></div>
+	  
 	  <div><th><form action="https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber" target="_blank">
-         <button class="button button" title="I'm mainly here" type="submit">YouTube</button>
+         <button class="button button1" title="I'm mainly here" type="submit">YouTube</button>
       </form></th></div>
 	  
 	  <div><th><form action="https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA" target="_blank">
-         <button class="button button" title="Where my original music lives" type="submit">Spotify</button>
-      </form></th></div>
-	  
-	  <div><th><form action="https://oliverhagen.bandcamp.com/releases;" target="_blank">
-         <button class="button button" title="Where my original music lives" type="submit">Bandcamp</button>
+         <button class="button button1" title="Where my original music lives" type="submit">Spotify</button>
       </form></th></div>
 	  
 	  <div><th><form action="https://soundcloud.com/penguinator-626121505" target="_blank">
-         <button class="button button" title="Stuff I can't or haven't uploaded to Spotify or Bandcamp" type="submit">SoundCloud</button>
+         <button class="button button1" title="Stuff I can't or haven't uploaded to Spotify or Bandcamp" type="submit">SoundCloud</button>
       </form></th></div>
 	  
 	  <div><th><form action="https://www.instagram.com/penguinatron/" target="_blank">
-         <button class="button button" title="Rarely used, not fully understood" type="submit">Instagram</button>
+         <button class="button button1" title="Rarely used, not fully understood" type="submit">Instagram</button>
       </form></th></div>
 	  
 	</div>
@@ -169,7 +173,7 @@ Current planned improvements include better scaling for mobile devices and very 
 I do not plan on switching to a website supplier/designer such as Squarespace, because apparently I'm a stubborn old fart trapped in a young man's body.</p>
 
 <hr>
-Last updated 2024-11-02
+Last updated 2024-11-07
 </body>
 </html>
 
