--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 <h4 style="background-color:tomato; margin:30px; border:5px; text-align:center; color:white;">For musical bookings, see the 'Socials' section below.</h4>
 	
 	<hr>
+	
+	<div class="flex-container">
+		<div><th><form action="https://www.fiverr.com/olihagen?up_rollout=true" target="_blank">
+	       <button class="button button2" title="'Career portfolio in the Gig Economy'" type="submit"><b>Fiverr</b></button>
+	    </form></th></div>
+	</div>
+	
+	<p style="text-align:center;">Giving this a try</p>
+		
+	<hr>
 	<h3 style="text-align:center;">Moonage</h3>
 	<h4 style="text-align:center;">David Bowie Tribute band I'm currently playing keyboards with</h4>
 	
@@ -29,7 +39,7 @@
 	<div class="flex-container">
 		
 		<div><th><form action="https://www.moonagebowietribute.co.uk" target="_blank">
-             <button class="button button" type="submit">Website</button>
+             <button class="button button1" type="submit">Website</button>
           </form></th></div>
 		
 	</div>
@@ -44,16 +54,16 @@
 	<div class="flex-container">
 		
 		<div><th><form action="https://oliverhagen.bandcamp.com/album/perfection-cant-be-rushed-but-this-sure-can" target="_blank">
-             <button class="button button" type="submit">Bandcamp</button>
+             <button class="button button3" type="submit"><b>Bandcamp</b></button>
           </form></th></div>
 		
 		
   	  <div><th><form action="https://open.spotify.com/album/44PziKBIPbgX5UhaDeC10O?si=PjiX8gyPRvmiPCv1yWB4pw" target="_blank">
-           <button class="button button" type="submit">Spotify</button>
+           <button class="button button1" type="submit">Spotify</button>
         </form></th></div>
 		
 		
-    	  <div><th><a href="https://youtube.com/playlist\?list=PL776zvniD1BgejY1hwlu_AQt2f5ICpiuN" target="_blank"><button class="button button">YouTube</button></a></th></div>
+    	  <div><th><a href="https://youtube.com/playlist\?list=PL776zvniD1BgejY1hwlu_AQt2f5ICpiuN" target="_blank"><button class="button button1">YouTube</button></a></th></div>
 		
 	</div>
 	
@@ -63,13 +73,13 @@
 	<div class="flex-container">
 		
   	  <div><th><form action="https://www.instagram.com/penguinatron/" target="_blank">
-           <button class="button button" title="Rarely used, not fully understood" type="submit">Instagram</button>
+           <button class="button button1" title="Rarely used, not fully understood" type="submit">Instagram</button>
         </form></th></div>
 		
-		<div><th><button class="button button" title="Rarely used, not fully understood" type="button">Discord - oliver.hagen</button></th></div>
+		<div><th><button class="button button1" title="Rarely used, not fully understood" type="button">Discord - oliver.hagen</button></th></div>
 		
   	  <div><th><form action="mailto:ophagen@icloud.com;" target="_blank">
-           <button class="button button" title="Old faithful" type="submit">Send Email</button>
+           <button class="button button1" title="Old faithful" type="submit">Send Email</button>
         </form></th></div>
 		
 	</div>
@@ -80,25 +90,25 @@
 	<div class="flex-container">
 		
   	  <div><th><form action="https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA" target="_blank">
-           <button class="button button" title="Where my original music lives" type="submit">Spotify</button>
+           <button class="button button1" title="Where my original music lives" type="submit">Spotify</button>
         </form></th></div>
 		
 	  <div><th><form action="https://oliverhagen.bandcamp.com/" target="_blank">
-         <button class="button button" title="Where my original music lives" type="submit">Bandcamp</button>
+         <button class="button button3" title="Where my original music lives" type="submit"><b>Bandcamp</b></button>
       </form></th></div>
 	  
 	  <div><th><form action="https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber" target="_blank">
-         <button class="button button" title="I'm mainly here" type="submit">YouTube</button>
+         <button class="button button1" title="I'm mainly here" type="submit">YouTube</button>
       </form></th></div>
 	  
 	  <div><th><form action="https://soundcloud.com/penguinator-626121505" target="_blank">
-         <button class="button button" title="Stuff I can't or haven't uploaded to Spotify or Bandcamp" type="submit">SoundCloud</button>
+         <button class="button button1" title="Stuff I can't or haven't uploaded to Spotify or Bandcamp" type="submit">SoundCloud</button>
       </form></th></div>
 		
 	</div>
 	  
 <hr>
-Last updated 2024-01-29
+Last updated 2024-11-07
 </body>
 </html>
 
